--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -134,8 +134,9 @@ body {
   .prose a {
       @apply text-primary hover:underline;
   }
-  .prose div[class="my-6 lg:my-8"] + div > p {
-    @apply text-center text-sm text-muted-foreground;
+  .prose .my-6 + p,
+  .prose .my-8 + p {
+    @apply text-center text-sm italic text-muted-foreground;
   }
 }
 
